--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simple Animaton form</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4175857855368421" crossorigin="anonymous"></script>
 </head>
+
 <body>
-     <form action="" class="box">
-      <h1>Login form</h1>
-      <input type="text" name="" placeholder="username">
-      <input type="password" name="" placeholder="password">
-      <input type="submit" name="" value="Login">
-     </form>
+    <form action="" class="box">
+        <h1>Login form</h1>
+        <input type="text" name="" placeholder="username">
+        <input type="password" name="" placeholder="password">
+        <input type="submit" name="" value="Login">
+    </form>
+
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4175857855368421" crossorigin="anonymous"></script>
+    <!-- learning-form -->
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4175857855368421" data-ad-slot="8614506555" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </body>
+
 </html>
